deploy/namespace-pipeline.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tekton-manual-demo-pipeline
status: {}
