deploy/namespace-preprod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tekton-manual-demo-preprod
status: {}
