deploy/namespace-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tekton-manual-demo-prod
status: {}
