deploy/sampleapp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app-demo
  namespace: tekton-manual-demo-prod
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"sample-manual-app:latest","namespace":"tekton-manual-demo-preprod"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app-demo\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app-demo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample-app-demo
    spec:
      containers:
        - name: app-demo
          image: >-
            image-registry.openshift-image-registry.svc:5000/tekton-manual-demo-preprod/sample-manual-app:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
