deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app-demo
  namespace: tekton-manual-demo-prod
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: sample-app-demo
